--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -2635,4 +2635,7 @@ No project is currently open. Would you like to create a new project?</value>
   <data name="Failed to replace screen image: image too complex (generated more than 255 tiles); please use a simpler image" xml:space="preserve">
     <value>Failed to replace screen image: image too complex (generated more than 255 tiles); please use a simpler image</value>
   </data>
+  <data name="Load Sound" xml:space="preserve">
+    <value>Load Sound</value><comment>The name of a parameter for the SND_PLAY command which indicates whether a sound should be loaded or not</comment>
+  </data>
 </root>
