--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -826,7 +826,7 @@ This action is irreversible.</value>
     <value>Error</value>
   </data>
   <data name="Error getting script command tree for script {0} ({1})" xml:space="preserve">
-    <value>Error getting script command tree for script {0} ({1})</value>
+    <value>Error getting script command tree for script {0} ({1}): {2} {3}</value>
     <comment>{0} is the script display name, {1} is the script's underlying name</comment>
   </data>
   <data name="Error pruning labels!" xml:space="preserve">
