Add the rest of the major script editor commands

--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -2761,4 +2761,26 @@ No project is currently open. Would you like to create a new project?</value>
   <data name="DIMMED" xml:space="preserve">
     <value>Dimmed</value>
   </data>
+  <data name="Section name already exists! Please pick a different name for this section." xml:space="preserve">
+    <value>Section name already exists! Please pick a different name for this section.</value>
+  </data>
+  <data name="Duplicate Section Name" xml:space="preserve">
+    <value>Duplicate Section Name</value>
+  </data>
+  <data name="Failed to load script file {0}" xml:space="preserve">
+    <value>Failed to load script file {0}</value>
+  </data>
+  <data name="Cannot Delete Root Section!" xml:space="preserve">
+    <value>Cannot Delete Root Section!</value>
+  </data>
+  <data name="The root section cannot be deleted!" xml:space="preserve">
+    <value>The root section cannot be deleted!</value>
+  </data>
+  <data name="Clear Script?" xml:space="preserve">
+    <value>Clear Script?</value>
+  </data>
+  <data name="Are you sure you want to clear the script?\nThis action is irreversible." xml:space="preserve">
+    <value>Are you sure you want to clear the script?
+This action is irreversible.</value>
+  </data>
 </root>
