--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -2641,4 +2641,10 @@ No project is currently open. Would you like to create a new project?</value>
   <data name="Load Sound" xml:space="preserve">
     <value>Load Sound</value><comment>The name of a parameter for the SND_PLAY command which indicates whether a sound should be loaded or not</comment>
   </data>
+  <data name="Number of Moves" xml:space="preserve">
+    <value>Number of Moves</value><comment>The number of moves available in a given chess puzzle</comment>
+  </data>
+  <data name="Time Limit" xml:space="preserve">
+    <value>The time limit for a given chess puzzle</value>
+  </data>
 </root>
