--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -2645,6 +2645,6 @@ No project is currently open. Would you like to create a new project?</value>
     <value>Number of Moves</value><comment>The number of moves available in a given chess puzzle</comment>
   </data>
   <data name="Time Limit" xml:space="preserve">
-    <value>The time limit for a given chess puzzle</value>
+    <value>Time Limit</value><comment>The time limit for a given chess puzzle</comment>
   </data>
 </root>
