More save editor work

--- a/src/SerialLoops/Assets/Strings.en-GB.resx
+++ b/src/SerialLoops/Assets/Strings.en-GB.resx
@@ -639,7 +639,7 @@
   <data name="Edit Save File" xml:space="preserve">
     <value>Edit Save File</value>
   </data>
-  <data name="Edit Save File - {0}" xml:space="preserve">
+  <data name="Edit Save File - {0} - {1}" xml:space="preserve">
     <value>Edit Save File - {0}</value>
   </data>
   <data name="Edit Save File..." xml:space="preserve">
