Finish MVVM-ifying search dialog

--- a/src/SerialLoops/Assets/Strings.en-GB.resx
+++ b/src/SerialLoops/Assets/Strings.en-GB.resx
@@ -1423,7 +1423,7 @@
   <data name="Option 4" xml:space="preserve">
     <value>Option 4</value>
   </data>
-  <data name="Orphaned Items" xml:space="preserve">
+  <data name="Orphaned_Items" xml:space="preserve">
     <value>Orphaned Items</value>
   </data>
   <data name="Outline Color" xml:space="preserve">
