--- a/src/SerialLoops/Assets/Strings.zh-Hans.resx
+++ b/src/SerialLoops/Assets/Strings.zh-Hans.resx
@@ -1522,7 +1522,7 @@
   <data name="Option 4" xml:space="preserve">
     <value>选项 4</value>
   </data>
-  <data name="Orphaned Items" xml:space="preserve">
+  <data name="Orphaned_Items" xml:space="preserve">
     <value>未使用的项目</value>
   </data>
   <data name="Outline Color" xml:space="preserve">
