Finish up layout editor

--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -2807,4 +2807,10 @@ This action is irreversible.</value>
   <data name="Search Project" xml:space="preserve">
     <value>Search Project</value>
   </data>
+  <data name="Export Layout Preview" xml:space="preserve">
+    <value>Export Layout Preview</value><comment>Button that exports a preview of the current layout item</comment>
+  </data>
+  <data name="Export Source Preview" xml:space="preserve">
+    <value>Export Source Preview</value><comment>Button that exports a preview of the current source image of a particular layout entry</comment>
+  </data>
 </root>
